[package]
name = "fixed-channel"
version = "0.1.0"
edition = "2021"
description = "A lock-free queue and MPMC channel"
keywords = ["lock-free", "queue", "channel"]
categories = ["algorithms", "concurrency", "data-structures"]
repository = "https://github.com/ericseppanen/fixed-channel"
license = "MIT"
authors = ["Eric Seppanen <eds@reric.net>"]
readme = "README.md"
rust-version = "1.56"

[dependencies]
sptr = "0.3.2"
